--- a/HTML & CSS/HTML/position.html
+++ b/HTML & CSS/HTML/position.html
@@ -20,7 +20,13 @@
     <section>
         <h2>Absolute Demo</h2>
         <div></div>
-        <div id="absolute"></div>
+        <div id="absolute">Absolute</div>
     </section>
+    <section>
+        <h2>Fixed Demo</h2>
+        <div></div>
+        <div id="fixed">Fixed</div>
+    </section>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta sequi ipsum voluptatum sunt assumenda, dolorem natus! Esse excepturi pariatur quibusdam voluptatem nisi nostrum libero nulla perspiciatis ratione. Sint, consequuntur error!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex perspiciatis iure rem libero ea, sed magni, laboriosam maiores et qui, dolore vel. Atque animi non odit fuga aspernatur magnam harum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi maiores est dolore obcaecati rem aperiam expedita aliquam inventore animi nostrum impedit culpa officiis eaque delectus ab ipsum, perferendis voluptatum vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quibusdam consequatur blanditiis atque distinctio repellendus minima! Aperiam sed mollitia reiciendis quaerat eveniet optio ex exercitationem, aspernatur a nisi similique omnis? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ut laboriosam, illo perspiciatis veritatis accusantium suscipit recusandae? Porro, laudantium quos aliquam saepe labore, corporis earum error ab, harum a nemo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, quos reiciendis? Architecto, error. Reprehenderit eos suscipit blanditiis molestias dolore nesciunt recusandae eveniet, dolorum enim dignissimos, odit quibusdam reiciendis magni mollitia? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, exercitationem aut dolorum, ipsum magni tempore minus repellat repudiandae quasi assumenda fuga laudantium optio cupiditate, fugit quisquam deleniti. Sed, inventore possimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis esse impedit, quos, ab laborum illo iure libero provident laudantium eligendi officiis temporibus velit? Veritatis delectus numquam esse aperiam vitae tenetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil atque aliquid veniam officiis tempore excepturi odio minus, magnam voluptatibus esse accusamus. Placeat labore dolorum voluptas nemo odit, officia debitis sint!
 </body>
 </html>
