--- a/HTML & CSS/HTML/youtube.html
+++ b/HTML & CSS/HTML/youtube.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="..//CSS/youtube.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <h2>YouTube Nav</h2>
@@ -15,7 +16,12 @@
             <div class="icon"></div>
         </div>
         <img src="..//Images/YouTube_Logo_2017.svg.png" class="logo" alt="YouTube">
-        <div class="searchbar"></div>
+        <div class="searchbar">
+            <input type="text" placeholder="Search">
+            <div class="search-btn">
+                <i class="far fa-search"></i>
+            </div>
+        </div>
         <div class="mic"></div>
         <div class="bell"></div>
         <div class="mylogo"></div>
