--- a/HTML & CSS/HTML/spotify clone.html
+++ b/HTML & CSS/HTML/spotify clone.html
@@ -157,7 +157,17 @@
                 </div>
             </div>
 
-            <div class="controls"></div>
+            <div class="controls">
+                <i class="fa-solid fa-circle-play" class="play-btn"></i>
+                <i class="fa-solid fa-microphone"></i>
+                <i class="fa-solid fa-bars-staggered"></i>
+                <i class="fa-regular fa-window-restore"></i>
+                <div class="volume">
+                    <i class="fa-solid fa-volume-high"></i>
+                    <input type="range" class="volume-bar" min="0" max="100" step="1">
+                </div>
+                <i class="fa-solid fa-expand"></i>
+            </div>
         </div>
     </div>
 </body>
