--- a/JavaScript/HTML/index.html
+++ b/JavaScript/HTML/index.html
@@ -6,7 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <h1>To-do-list</h1>
+    <h3>List</h3>
+    <h3>Add</h3>
+    <h3>Delete</h3>
+    <h3>Quit</h3>
 <script src="..//JavaScript/index.js"></script>
 </body>
 </html>
