Add layout and styling for profile card and banner in HTML and CSS

--- a/HTML & CSS/HTML/practice.html
+++ b/HTML & CSS/HTML/practice.html
@@ -9,14 +9,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-    <h1>Profile Card</h1>
+<h1>Profile Card</h1>
+    <div class="main">
     <div class="card">
         <img src="..//Images/card4img.jpeg" class="card-image" alt="profile">
         <div class="card-body">
-            <p><strong>Name:</strong> Mantresh Patwardhan</p>
-            <p><strong>Age:</strong> 20</p>
-            <p><strong>Occupation:</strong> Software Dev</p>
+            <p><strong>Name:</strong>Mantresh Patwardhan</p>
+            <p><strong>Age:</strong>20</p>
+            <p><strong>Occupation:</strong>Software Dev</p>
         </div>
+    </div>
+
+    <div class="banner">
+        <img src="..//Images/card5img.jpeg" class="imgg"
+        <div class="card-text">
+            <p><strong>Name:</strong>Liladhar Patwardhan</p>
+            <p><strong>Age:</strong>20</p>
+            <p><strong>City:</strong>London</p>
+        </div>
+    </div>
     </div>
 </body>
 </html>
