Refactor Instagram layout by restructuring HTML and enhancing navigation items

--- a/Projects/Files/Instagram.html
+++ b/Projects/Files/Instagram.html
@@ -6,10 +6,23 @@
     <link rel="icon" href="../Images/InstaLogo.png">
     <title>Instagram</title>
     <link rel="stylesheet" href="Instagram.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-    <div>
-        <div class="left-sidebar"></div>
+    <div class="main">
+        <nav class="left-sidebar">
+            <div class="logo">Instagram</div>
+            <ul class="nav-list">
+                <li><a class="nav-item" href="#"><i class="fa-solid fa-house"></i><span>Home</span></a></li>
+                <li><a class="nav-item" href="#"><i class="fa-solid fa-magnifying-glass"></i><span>Search</span></a></li>
+                <li><a class="nav-item" href="#"><i class="fa-regular fa-compass"></i><span>Explore</span></a></li>
+                <li><a class="nav-item" href="#"><i class="fa-solid fa-clapperboard"></i><span>Reels</span></a></li>
+                <li><a class="nav-item" href="#"><i class="fa-regular fa-paper-plane"></i><span>Messages</span></a></li>
+                <li><a class="nav-item" href="#"><i class="fa-regular fa-heart"></i><span>Notifications</span></a></li>
+                <li><a class="nav-item" href="#"><i class="fa-regular fa-square-plus"></i><span>Create</span></a></li>
+                <li><a class="nav-item" href="#"><i class="fa-regular fa-user"></i><span>Profile</span></a></li>
+            </ul>
+        </nav>
         <div class="middle"></div>
         <div class="right-sidebar"></div>
     </div>
