Update part10.css and part10.html with new styles and structure; add event listeners in part10.js for paragraph and box interactions

--- a/JavaScript/HTML/part10.html
+++ b/JavaScript/HTML/part10.html
@@ -14,6 +14,10 @@
     <br>
     <div>This is the div</div>
     <br>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nihil quod, cupiditate quo nostrum sequi asperiores atque, numquam ea adipisci eos placeat nam iure cum nisi excepturi architecto debitis culpa!</p>
+
+    <div class="ll"></div>
 <script src="..//JavaScript/part10.js"></script>
 </body>
 </html>
