Refactor part10.html and part10.js: update HTML structure and clean up commented code in JavaScript

--- a/JavaScript/HTML/part10.html
+++ b/JavaScript/HTML/part10.html
@@ -7,17 +7,10 @@
     <link rel="stylesheet" href="..//CSS/part10.css">
 </head>
 <body>
-    <h1>Random color</h1>
-    <br>
+    <h1>Mantresh</h1>
     <button>Click me</button>
-    <br>
-    <br>
-    <div>This is the div</div>
-    <br>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nihil quod, cupiditate quo nostrum sequi asperiores atque, numquam ea adipisci eos placeat nam iure cum nisi excepturi architecto debitis culpa!</p>
-
-    <div class="ll"></div>
+    <div>oo</div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias laboriosam inventore ipsum architecto officia iste, magni vel aspernatur iure nisi? Consequuntur inventore excepturi maiores ullam fugiat nisi quaerat voluptatem cupiditate!</p>
 <script src="..//JavaScript/part10.js"></script>
 </body>
 </html>
