Update part10.html and part10.js: modify form action and implement form submission handling with input values

--- a/JavaScript/HTML/part10.html
+++ b/JavaScript/HTML/part10.html
@@ -10,8 +10,9 @@
     <input placeholder="type something">
     <button>Click me</button>
 
-    <form action="/action">
-        <input placeholder="username"/>
+    <form action="/Projects/Files/Instagram.css">
+        <input placeholder="username" id="user">
+        <input placeholder="password" id="password">
         <button>Register</button>
     </form>
 <script src="..//JavaScript/part10.js"></script>
