Refactor part10.html, part10.css, and part10.js: remove unused code, update HTML structure for to-do list, and implement item addition and deletion functionality

--- a/JavaScript/HTML/part10.html
+++ b/JavaScript/HTML/part10.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="..//CSS/part10.css">
 </head>
 <body>
-    <div>
-        <ul>
-            <li>One</li>
-            <li>Two</li>
-            <li>Three</li>
-        </ul>
-    </div>
+    <h1>To-do's</h1>
+    <input placeholder="Enter your task">
+    <button>Enter task</button>
+    <ul>
+        <li>Eat <input type="radio" class="delete"></li>
+        <li>Sleps <input type="radio" class="delete"></li>
+    </ul>
 <script src="..//JavaScript/part10.js"></script>
 </body>
 </html>
