Refactor partt11.js: add button event listener to fetch and display random cat facts using Axios

--- a/JavaScript/HTML/part11.html
+++ b/JavaScript/HTML/part11.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Text</h1>
+    <h1>Get random cat facts</h1>
+    <button>Show a new fact</button>
+    <p id="factss"></p>
+
     <script src="..//JavaScript/partt11.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.13.2/dist/axios.min.js"></script>
 </body>
