--- a/JavaScript/HTML/part11.html
+++ b/JavaScript/HTML/part11.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Get random cat facts</h1>
-    <button>Show a new fact</button>
-    <p id="factss"></p>
+    <h1>Get random cat image</h1>
+    <button>Show</button>
+    <img src="" id="result">
 
     <script src="..//JavaScript/partt11.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.13.2/dist/axios.min.js"></script>
