Refactor part1.html and part1.css: update icon classes for consistency; enhance layout styling and structure

--- a/Practice/part1.html
+++ b/Practice/part1.html
@@ -17,13 +17,26 @@
             </div>
         </div>
         <div class="middle-icons">
-            <i class="fa-regular fa-house" style="color: #c0c0c0;"></i>
-            <i class="fa-solid fa-people-group" style="color: #c0c0c0;"></i>
-            <i class="fa-solid fa-video" style="color: #c0c0c0;"></i>
-            <i class="fa-solid fa-store" style="color: #c0c0c0;"></i>
-            <i class="fa-solid fa-address-card" style="color: #c0c0c0;"></i>
+            <i class="fa-regular fa-house fa-mid" ></i>
+            <i class="fa-solid fa-people-group fa-mid" ></i>
+            <i class="fa-solid fa-video fa-mid" ></i>
+            <i class="fa-solid fa-store fa-mid" ></i>
+            <i class="fa-solid fa-address-card fa-mid" ></i>
         </div>
-        <div class="lasticons"></div>
+        <div class="lasticons">
+            <div class="icon-border">
+                <i class="fa-solid fa-cubes fa-end"></i>
+            </div>
+            <div class="icon-border">
+                <i class="fa-brands fa-facebook-messenger fa-end"></i>
+            </div>
+            <div class="icon-border">
+                <i class="fa-solid fa-bell fa-end"></i>
+            </div>
+            <div class="icon-border">
+                <i class="fa-solid fa-user fa-end"></i>
+            </div>
+        </div>
     </div>
 <script src="part1.js"></script>
 </body>
