--- a/Practice/index1.html
+++ b/Practice/index1.html
@@ -7,13 +7,19 @@
     <link rel="stylesheet" href="index1.css">
 </head>
 <body>
-    <div class="counter-box">
+    <!-- <h1>Smart Counter</h1> -->
+    <!-- <div class="counter-box">
         <h1 id="count">0</h1>
         <p id="message"></p>
     </div>
     <button id="increase">+</button>
     <button id="decrease">-</button>
-    <button id="reset">Reset</button>
+    <button id="reset">Reset</button> -->
+
+    <h1>Password Strength Checker</h1>
+    <input type="password" id="password" placeholder="Enter Password">
+    <p id="strength">Strength: </p>
+
 <script src="index1.js"></script>
 </body>
 </html>
