--- a/Practice/part1.html
+++ b/Practice/part1.html
@@ -13,6 +13,7 @@
             <i class="fa-brands fa-facebook fb-icon">
             </i>
             <div class="srch-border">
+                <!-- <input type="search" class="search"> -->
                 <i class="fa-solid fa-magnifying-glass srch-icon" style="color: #ffffff;"></i>
             </div>
         </div>
