--- a/Practice/part1.html
+++ b/Practice/part1.html
@@ -10,8 +10,9 @@
 <body>
     <div class="main">
         <div class="logoandsearch">
-            <i class="fa-brands fa-facebook fb-icon">
-            </i>
+            <div class="logo-border">
+                <i class="fa-brands fa-facebook fb-icon"></i>
+            </div>
             <div class="srch-border">
                 <!-- <input type="search" class="search"> -->
                 <i class="fa-solid fa-magnifying-glass srch-icon" style="color: #ffffff;"></i>
