--- a/Practice/index1.html
+++ b/Practice/index1.html
@@ -20,7 +20,9 @@
 
     <main class="card">
         <h1>Theme Switcher</h1>
-        
+        <p>Click the button to switch between light and dark themes. Refresh the page
+        to test if it remembers your choice.</p>
+        <button id="themeBtn" class="btn">🌙 Dark Mode</button>
     </main>
 
 <script src="index1.js"></script>
