--- a/Practice/part1.html
+++ b/Practice/part1.html
@@ -9,37 +9,16 @@
 </head>
 <body>
     <div class="main">
-        <div class="nav-bar">
-            <div class="nav-left">
-                <div class="nav-logo">
-                    <i class="fa-brands fa-facebook fb-icon"></i>
-                </div>
-                <div class="nav-search-border">
-                    <input class="nav-search-input" type="text" placeholder="Search Facebook">
+        <div class="navbar">
+            <div class="navbar-left">
+                <i class="fa-brands fa-facebook fb-icon"></i>
+                <div class="nav-search-wrap">
                     <i class="fa-solid fa-magnifying-glass nav-search-icon"></i>
+                    <input class="nav-search" type="text" placeholder="Search Facebook"></input>
                 </div>
             </div>
-            <div class="nav-center">
-                <i class="fa-regular fa-house nav-center-icon"></i>
-                <i class="fa-solid fa-people-group nav-center-icon"></i>
-                <i class="fa-solid fa-video nav-center-icon"></i>
-                <i class="fa-solid fa-store nav-center-icon"></i>
-                <i class="fa-solid fa-address-card nav-center-icon"></i>
-            </div>
-            <div class="nav-right">
-                <div class="nav-right-button">
-                    <i class="fa-solid fa-cubes nav-right-icon"></i>
-                </div>
-                <div class="nav-right-button">
-                    <i class="fa-brands fa-facebook-messenger nav-right-icon"></i>
-                </div>
-                <div class="nav-right-button">
-                    <i class="fa-solid fa-bell nav-right-icon"></i>
-                </div>
-                <div class="nav-right-avatar">
-                    <i class="fa-solid fa-user nav-right-icon nav-right-user"></i>
-                </div>
-            </div>
+            <div class="navbar-mid"></div>
+            <div class="navbar-right"></div>
         </div>
     </div>
 <script src="part1.js"></script>
