Worked on FB Nav-bar

--- a/Practice/part1.html
+++ b/Practice/part1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Facebook</title>
     <link rel="stylesheet" href="part1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -17,8 +17,19 @@
                     <input class="nav-search" type="text" placeholder="Search Facebook"></input>
                 </div>
             </div>
-            <div class="navbar-mid"></div>
-            <div class="navbar-right"></div>
+            <div class="navbar-mid">
+                <i class="fa-regular fa-house nav-center-icon"></i>
+                <i class="fa-solid fa-people-group nav-center-icon"></i>
+                <i class="fa-solid fa-video nav-center-icon"></i>
+                <i class="fa-solid fa-store nav-center-icon"></i>
+                <i class="fa-solid fa-address-card nav-center-icon"></i>
+            </div>
+            <div class="navbar-right">
+                <div class="icon-background"><i class="fa-solid fa-cubes nav-right-icon"></i></div>
+                <div class="icon-background"><i class="fa-brands fa-facebook-messenger nav-right-icon"></i></div>
+                <div class="icon-background"><i class="fa-solid fa-bell nav-right-icon"></i></div>
+                <div class="icon-background"><i class="fa-solid fa-user nav-right-icon nav-right-user"></i></div>
+            </div>
         </div>
     </div>
 <script src="part1.js"></script>
