--- a/Practice/index1.html
+++ b/Practice/index1.html
@@ -31,6 +31,11 @@
     <div class="main">
         <h1>Simple Calculator</h1>
         <div class="result"><p>Result</p></div>
+        <input type="text" id="inp">
+        <button id="add">+</button>
+        <button id="sub">-</button>
+        <button id="mul">*</button>
+        <button id="mod">%</button>
     </div>
 
 <script src="index1.js"></script>
