Added multiple div for buttons bg

--- a/Practice/HTML/Facebook.html
+++ b/Practice/HTML/Facebook.html
@@ -18,11 +18,11 @@
                 </div>
             </div>
             <div class="navbar-mid">
-                <i class="fa-solid fa-house nav-center-icon"></i>
-                <i class="fa-solid fa-people-group nav-center-icon"></i>
-                <i class="fa-solid fa-video nav-center-icon"></i>
-                <i class="fa-solid fa-store nav-center-icon"></i>
-                <i class="fa-solid fa-address-card nav-center-icon"></i>
+                <div class="div-bg"><i class="fa-solid fa-house nav-center-icon"></i></div>
+                <div class="div-bg"><i class="fa-solid fa-people-group nav-center-icon"></i></div>
+                <div class="div-bg"><i class="fa-solid fa-video nav-center-icon"></i></div>
+                <div class="div-bg"><i class="fa-solid fa-store nav-center-icon"></i></div>
+                <div class="div-bg"><i class="fa-solid fa-address-card nav-center-icon"></i></div>
             </div>
             <div class="navbar-right">
                 <div class="icon-background"><i class="fa-solid fa-cubes nav-right-icon"></i></div>
