--- a/Practice/HTML/Facebook.html
+++ b/Practice/HTML/Facebook.html
@@ -31,6 +31,7 @@
                 <div class="icon-background"><i class="fa-solid fa-user nav-right-icon nav-right-user"></i></div>
             </div>
         </div>
+        <div class="maintwo"></div>
     </div>
 <script src="/Practice/JS/Facebook.js"></script>
 </body>
